--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "name": "chat-jesus",
   "version": "1.0.0",
-  "main": "server.js",
+  "type": "commonjs",
   "scripts": {
-    "start": "node server.js"
+    "start": "vercel dev"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
     "node-fetch": "^2.6.11"
   }
 }
